# exorcist

./: .coveragerc  .readthedocs.yaml  README.md  setup.cfg
.github/workflows/: ci.yaml
devtools/postgres/: create.sh  install.sh  restart.sh  stop.sh
devtools/sqlite/: create.sh  install.sh
docs/: conf.py  environment.yaml  index.rst
docs/api/: index.rst  taskstatusdb.rst
docs/guide/: index.rst  intro.rst
exorcist/: __init__.py  claim_task.py  example_client.py  logutils.py  models.py  resultstore.py  taskdb.py  taskstore.py  worker.py
exorcist/tests/: test_example_client.py  test_logutils.py  test_nothing.py  test_taskstatusdb.py
lockfile_stress_test/: README.md  karras.py  regan.py  with_fasteners.py  with_sqlite.py
