[metadata]
name = exorcist
description =  foo
long_description = file: README.md
long_description_type = text/markdown
author = The OpenFE developers
author_email = openfreeenergy@omsf.io
license = MIT
license_file = LICENSE
url = https://github.com/OpenFreeEnergy/exorcist
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.9
install_requires =
    networkx
    sqlalchemy

include_package_data = True
packages = find:

[options.extras_require]
test =
    pytest

[mypy]
files=exorcist
ignore_missing_imports=true
